--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,5 @@
 body {
-    background: #F6F6FA;
+    background: #f8f3ee;
     padding: 40px 40px 40px 40px;
     font-family: 'Montserrat', sans-serif;
 }
@@ -22,7 +22,7 @@ body {
 
 /* Sidebar */
 .sidebar {
-    background: #E0EBFE;
+    background: #e9dccc;
     padding-top: 40px;
     padding-bottom: 40px;
     box-sizing: border-box;
@@ -56,7 +56,7 @@ body {
 }
 
 .contacts-link {
-    color: #2979FF;
+    color: #c9575f;
     font-size: 14px;
     font-weight: 400;
     line-height: 24px;
